--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,20 @@
     <include src="./partials/footer.html"></include>
 
     <script src="./index.js"></script>
+    <script src="./js/mobile-menu.js"></script>
+    <script>
+      ;(() => {
+        document
+          .querySelector('.js-speaker-form')
+          .addEventListener('submit', e => {
+            e.preventDefault()
+
+            new FormData(e.currentTarget).forEach((value, name) =>
+              console.log(`${name}: ${value}`),
+            )
+            e.currentTarget.reset()
+          })
+      })()
+    </script>
   </body>
 </html>
