--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
     <include src="./partials/reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/modal.html"></include>
 
+    <script src="./js/modal.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
