--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
 
     <script src="./index.js"></script>
     <script src="./js/mobile-menu.js"></script>
+    <script src="./js/buy-modal.js"></script>
     <script>
       (() => {
         document.querySelector('.js-speaker-form').addEventListener('submit', e => {
