--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
       $(document).ready(function () {
         $('.button-animation').click(function () {
           $(this).parent().children('.sub-text').slideToggle(250);
+          $(this).parent().children('.sub-read').slideToggle(250);
           return false;
         });
       });
