2 buttons work for modal "Buy now"

--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,7 @@
     <script src="./js/about-modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/buy-modal.js"></script>
+    <script src="./js/buy-modal-tablet.js"></script>
     <script>
       (() => {
         document.querySelector('.js-speaker-form').addEventListener('submit', e => {
